--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wildtype",
+  "publisher": "Wildtype",
   "displayName": "Wildtype",
   "description": "Dark theme with calm, earthy colors contrasted with deep, dark blues.",
   "version": "0.0.1",
