--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "description": "Dark theme with calm, earthy colors contrasted with deep, dark blues.",
   "version": "0.0.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wtype/wildtype-theme.git"
+  },
   "engines": {
     "vscode": "^1.46.0"
   },
